--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@giscus/react": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
