--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=production --no-devtool",
     "dev": "webpack serve --mode=development"
   },
   "keywords": [],
